--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="bryan.html">Bryan</a></li>
                 <li><a href="djessica.html">Djessica</a></li>
                 <li><a href="gisele.html">Gisele</a></li>
-                <li><a href="izadora.html">Izadora</a></li>
+                <li><a href="izadora.html">Isadora</a></li>
                 <li><a href="joao.html">João</a></li>
                 <li><a href="leo.html">Leo</a></li>
                 <li><a href="liliah.html">Liliah</a></li>
